Small change for hrefs from index.html to just blank.

--- a/goal1/goal1.html
+++ b/goal1/goal1.html
@@ -16,6 +16,6 @@
 
 <body>
   <h1>Goal Page 1</h1>
-  <a href="../index.html">Go back home.</a>
+  <a href="../">Go back home.</a>
 </body>
 </html>
