--- a/goal1/step1-1.html
+++ b/goal1/step1-1.html
@@ -16,7 +16,7 @@
 
 <body>
   <h1>Goal 1 Step 1</h1>
-  <a href="../index.html">Go back home.</a>
+  <a href="../">Go back home.</a>
   <hr>
   <a href="step1-2.html">Go to Step 2.</a>
 </body>
