--- a/goal1/step1-3.html
+++ b/goal1/step1-3.html
@@ -16,7 +16,7 @@
 
 <body>
   <h1>Goal 1 Step 3</h1>
-  <a href="../index.html">Go back home.</a>
+  <a href="../">Go back home.</a>
   <a href="step1-2.html">Go back to Step 2.</a>
   <hr>
   <a href="goal1.html">Go to Goal 1.</a>
