--- a/goal2/step2-3.html
+++ b/goal2/step2-3.html
@@ -16,7 +16,7 @@
 
 <body>
   <h1>Goal 2 Step 3</h1>
-  <a href="../index.html">Go back home.</a>
+  <a href="../">Go back home.</a>
   <a href="step2-2.html">Go back to Step 2.</a>
   <hr>
   <a href="goal2.html">Go to Goal 2.</a>
