--- a/goal1/step1-2.html
+++ b/goal1/step1-2.html
@@ -16,7 +16,7 @@
 
 <body>
   <h1>Goal 1 Step 2</h1>
-  <a href="../index.html">Go back home.</a>
+  <a href="../">Go back home.</a>
   <a href="step1-1.html">Go Back to Step 1.</a>
   <hr>
   <a href="step1-3.html">Go to Step 3.</a>
