--- a/goal2/goal2.html
+++ b/goal2/goal2.html
@@ -16,6 +16,6 @@
 
 <body>
   <h1>Goal Page 2</h1>
-  <a href="../index.html">Go back home.</a>
+  <a href="../">Go back home.</a>
 </body>
 </html>
