--- a/goal2/step2-1.html
+++ b/goal2/step2-1.html
@@ -16,8 +16,8 @@
 
 <body>
   <h1>Goal #2 Step #1</h1>
-  <a href="../index.html">Go back home.</a>
+  <a href="../">Go back home.</a>
   <hr>
-  <a href="step2-2.html">Go to Step #2.</a>
+  <a href="step2-2.html">Go to Step 2.</a>
 </body>
 </html>
