--- a/goal3/goal3.html
+++ b/goal3/goal3.html
@@ -16,6 +16,6 @@
 
 <body>
   <h1>Goal Page 3</h1>
-  <a href="../index.html">Go back home.</a>
+  <a href="../">Go back home.</a>
 </body>
 </html>
