--- a/goal3/step3-3.html
+++ b/goal3/step3-3.html
@@ -16,9 +16,9 @@
 
 <body>
   <h1>Goal 3 Step 3</h1>
-  <a href="../index.html">Go back home.</a>
+  <a href="../">Go back home.</a>
   <a href="step3-2.html">Go back to Step 2.</a>
   <hr>
-  <a href="goal3.html">Go to Goal 1.</a>
+  <a href="goal3.html">Go to Goal 3.</a>
 </body>
 </html>
